--- a/ru/Modules/Russian/ModuleData/Languages/SandBox/std_SandBox_GauntletUI_tr.xml
+++ b/ru/Modules/Russian/ModuleData/Languages/SandBox/std_SandBox_GauntletUI_tr.xml
@@ -5,8 +5,8 @@
   </tags>
   <strings>
     <string id="1VOXUsST" text="Настроить символ вашего баннера "/>
-    <string id="3CpNUnVl" text="Отменить"/>
+    <string id="3CpNUnVl" text="Отмена"/>
     <string id="Eg3m6vUS" text="Настройте свой персональный баннер, выбрав символ вашего клана "/>
-    <string id="WiNRdfsm" text="Выполнить"/>
+    <string id="WiNRdfsm" text="Готово"/>
   </strings>
 </base>
